--- a/Poe.Functions/Poe.Functions.csproj
+++ b/Poe.Functions/Poe.Functions.csproj
@@ -6,6 +6,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.3.0" />
     </ItemGroup>
     <ItemGroup>
