--- a/Poe.Functions/Poe.Functions.csproj
+++ b/Poe.Functions/Poe.Functions.csproj
@@ -8,6 +8,7 @@
         <PackageReference Include="Azure.Identity" Version="1.10.4" />
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.CosmosDB" Version="4.4.2" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
@@ -24,5 +25,6 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\PoE.Services\PoE.Services.csproj" />
+      <ProjectReference Include="..\Poe.Shared\Poe.Shared.csproj" />
     </ItemGroup>
 </Project>
