--- a/PoE.Services/PoE.Services.csproj
+++ b/PoE.Services/PoE.Services.csproj
@@ -14,4 +14,9 @@
       <ProjectReference Include="..\Poe.Shared\Poe.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include=".Models\" />
+      <Folder Include="Models\" />
+    </ItemGroup>
+
 </Project>
